// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bucket api Get bucket by id 1`] = `
Object {
  "allowed_mime_types": null,
  "created_at": "2021-02-17T04:43:32.770206+00:00",
  "file_size_limit": 0,
  "id": "bucket2",
  "name": "bucket2",
  "owner": "4d56e902-f0a0-4662-8448-a4d9e643c142",
  "public": false,
  "updated_at": "2021-02-17T04:43:32.770206+00:00",
}
`;

exports[`bucket api Get bucket with wrong id 1`] = `[StorageApiError: The resource was not found]`;

exports[`bucket api delete bucket 1`] = `
Object {
  "message": "Successfully deleted",
}
`;

exports[`bucket api empty bucket 1`] = `
Object {
  "message": "Successfully emptied",
}
`;

exports[`bucket api partially update bucket 1`] = `
Object {
  "message": "Successfully updated",
}
`;

exports[`bucket api update bucket 1`] = `
Object {
  "message": "Successfully updated",
}
`;
